add in seacrinstance select repot type
