# src/main/java/com/nexigroup/pagopa/cruscotto/sert/service/dto/SearchInstanceDTO.java
@@ -5,6 +5,7 @@ import java.time.Instant;
 import java.util.UUID;
 
 import com.nexigroup.pagopa.cruscotto.sert.domain.enumeration.PerimeterSearchType;
+import com.nexigroup.pagopa.cruscotto.sert.domain.enumeration.SelectedReports;
 import com.nexigroup.pagopa.cruscotto.sert.domain.enumeration.SearchInstanceStatus;
 import com.nexigroup.pagopa.cruscotto.sert.service.massivesearch.filter.SearchBulkFilterDTO;
 import lombok.AllArgsConstructor;
@@ -23,6 +24,7 @@ public class SearchInstanceDTO implements Serializable {
     private UUID id;
     private String name;
     private PerimeterSearchType inputType; // FILTER | CSV
+    private SelectedReports selectedReports;
     private SearchInstanceStatus status; // DRAFT, READY, RUNNING, EXECUTED, FAILED, ARCHIVED
     private Instant createdAt;
     private Instant updatedAt;
