# src/main/java/com/nexigroup/pagopa/cruscotto/sert/web/rest/sertSearch/sertResourceSubKey/SearchInstanceSubKeyResource.java
@@ -1,6 +1,7 @@
 package com.nexigroup.pagopa.cruscotto.sert.web.rest.sertSearch.sertResourceSubKey;
 
 import com.nexigroup.pagopa.cruscotto.sert.domain.enumeration.PerimeterSearchType;
+import com.nexigroup.pagopa.cruscotto.sert.domain.enumeration.SelectedReports;
 import com.nexigroup.pagopa.cruscotto.sert.security.AuthoritiesConstants;
 import com.nexigroup.pagopa.cruscotto.sert.service.SearchInstanceAction;
 import com.nexigroup.pagopa.cruscotto.sert.service.SearchInstanceService;
@@ -110,6 +111,7 @@ public class SearchInstanceSubKeyResource {
     @Operation(summary = "Upload CSV for Search Instance")
     public ResponseEntity<WrapperInstanceCsv> saveInstanceCsv(
         @RequestParam("name") String name,
+        @RequestParam("selectedReports") SelectedReports selectedReports,
         @RequestPart("file") MultipartFile file) {
 
         if (file == null || file.isEmpty()) {
@@ -138,6 +140,7 @@ public class SearchInstanceSubKeyResource {
 
         SearchInstanceDTO dto = SearchInstanceDTO.builder()
             .name(name)
+            .selectedReports(selectedReports)
             .inputType(PerimeterSearchType.CSV)
             .build();
 
